--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+<h1>netlify-express</h1>
 <object
   type="text/html"
   data="/.netlify/functions/server"
   style="width:100%;height:100%;"
 >
+</object>
