--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,5 @@
 <object
   type="text/html"
   data="/.netlify/functions/server"
-  style="width:100%;height:100%;"
->
-</object>
+  style="width:100%; height:100%"
+></object>
